# conference-report-skill

./: .gitignore  AGENTS.md  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
conference_report/: __init__.py  asr.py  auth.py  cli.py  config.py  dedupe.py  embeddings.py  ingest.py  pipeline_state.py  report.py  segment.py  slides.py  utils.py  validate.py
examples/manual_segments/: manual_segments.template.yaml
scripts/: check_before_push.py  install.py  install_agent_skill.py  install_codex_skill.py  install_git_hooks.py  uninstall.py
skills/conference-report/: SKILL.md
skills/conference-report/agents/: openai.yaml
tests/: test_agent_gate_resume.py  test_auth.py  test_config_profiles.py  test_embeddings.py  test_git_hooks.py  test_install_agent_skill.py  test_install_script.py  test_report_quality_gate.py  test_report_writer_modes.py  test_skill_text.py  test_uninstall_script.py  test_utils.py  test_validate_agent_tasks.py
